# cuda_learning

./: .gitignore  README.md
examples/: CMakeLists.txt  README.md  notes.txt
examples/01_gpu_basics/: CMakeLists.txt  README.md  basics_01.cu  cpu_vs_gpu.cu  cpu_vs_gpu_1.cu  stream_event.cu  wmma_01.cu
examples/02_cuda_intro/: CMakeLists.txt  README.md  cuda_basics.cu
examples/03_gpu_hardware/: CMakeLists.txt  README.md  device_info.cu
examples/04_thread_hierarchy/: CMakeLists.txt  README.md  thread_index.cu
examples/05_hello_cuda/: CMakeLists.txt  README.md  hello_cuda.cu
examples/06_memory_basics/: CMakeLists.txt  README.md  memory_demo.cu
examples/07_kernel_deep/: CMakeLists.txt  README.md  kernel_demo.cu
examples/08_profiling/: CMakeLists.txt  README.md  profiling_demo.cu
examples/09_memory_opt/: CMakeLists.txt  README.md  memory_opt.cu
examples/10_precision/: CMakeLists.txt  README.md  precision_demo.cu
examples/11_roofline/: CMakeLists.txt  README.md  roofline_demo.cu
examples/12_atomic_race/: 01_race_condition.cu  02_atomic_add.cu  03_atomic_performance.cu  04_warp_reduce.cu  05_block_reduce.cu  06_atomic_cas.cu  07_histogram.cu  CMakeLists.txt  README.md
examples/13_shared_memory/: 01_smem_basics.cu  02_static_vs_dynamic.cu  03_syncthreads.cu  04_matrix_mul_smem.cu  05_smem_config.cu  CMakeLists.txt  README.md
examples/14_reduce/: 01_naive_reduce.cu  02_tree_reduce.cu  03_warp_shuffle_reduce.cu  04_two_pass_reduce.cu  05_cooperative_groups_reduce.cu  06_performance_comparison.cu  CMakeLists.txt  README.md
examples/15_bank_conflict/: 01_bank_structure.cu  02_bank_conflict_demo.cu  03_padding_solution.cu  04_xor_swizzling.cu  05_matrix_transpose.cu  CMakeLists.txt  README.md
examples/16_cooperative_groups/: 01_thread_block.cu  02_warp_group.cu  03_grid_sync.cu  04_reduce_with_cg.cu  05_launch_cooperative.cu  06_thread_block_cluster.cu  CMakeLists.txt  README.md
examples/17_gemm_basics/: 01_naive_gemm.cu  02_coalesced_gemm.cu  03_tiled_gemm.cu  CMakeLists.txt  README.md
examples/18_gemm_tiling/: 01_smem_caching.cu  02_1d_blocktiling.cu  03_2d_blocktiling.cu  04_warptiling.cu  CMakeLists.txt  README.md
examples/19_tensor_core/: 01_tensor_core_basics.cu  02_wmma_gemm.cu  03_mixed_precision.cu  CMakeLists.txt  README.md
examples/20_convolution/: 01_direct_conv.cu  02_im2col_conv.cu  03_smem_conv.cu  CMakeLists.txt  README.md
examples/21_async_execution/: 01_double_buffer.cu  02_software_pipeline.cu  03_memcpy_async.cu  04_pipeline_primitives.cu  CMakeLists.txt  README.md
examples/22_streams/: 01_stream_basics.cu  02_multi_stream.cu  03_stream_sync.cu  04_cuda_events.cu  05_concurrent_kernels.cu  CMakeLists.txt  README.md
examples/23_data_transfer/: 01_pinned_memory.cu  02_async_transfer.cu  03_zero_copy.cu  04_unified_memory.cu  05_prefetch_advise.cu  CMakeLists.txt  README.md
examples/24_cuda_graph/: 01_graph_basics.cu  02_stream_capture.cu  03_graph_instantiate.cu  04_graph_optimize.cu  CMakeLists.txt  README.md
examples/25_multi_gpu/: 01_device_selection.cu  02_p2p_transfer.cu  03_nccl_basics.cu  04_allreduce.cu  CMakeLists.txt  README.md
examples/26_quantization/: 01_fp16_basics.cu  02_bf16_tf32.cu  03_int8_quantize.cu  04_quantized_gemm.cu  CMakeLists.txt  README.md
examples/27_ptx_optimization/: 01_ptx_basics.cu  02_inline_ptx.cu  03_ptx_optimization.cu  04_inspect_ptx.cu  CMakeLists.txt  README.md
examples/28_micro_optimization/: 01_pragma_unroll.cu  02_restrict_qualifier.cu  03_compiler_options.cu  04_alignment.cu  05_ldg_const.cu  CMakeLists.txt  README.md
examples/29_ilp_divergence/: 01_ilp_basics.cu  02_dual_issue.cu  03_warp_divergence.cu  04_branch_optimization.cu  CMakeLists.txt  README.md
examples/30_cuda_libraries/: 01_cublas_gemm.cu  02_cudnn_conv.cu  03_cub_reduce.cu  04_cutlass_gemm.cu  CMakeLists.txt  README.md
lecture_slides/: 2025冬季-内存模型与规约优化.md  2025冬季-分块与不规则访存.md  2025冬季-异步并行_底层控制与系统优化.md  2025冬季-量化与工业级调优部署.md
lecture_slides/cuda_12_2_1_programming_guide/: manifest.json
lecture_slides/cuda_12_2_1_programming_guide/pages/: contents.md  genindex.md  index.md  lazy-loading.md  search.md
scripts/: check_env.sh  compile_all.sh  run_example.sh
tutorials/: 01_什么是GPU并行计算.md  02_CUDA是什么.md  03_GPU硬件架构入门.md  04_线程层级结构.md  05_第一个CUDA程序.md  06_内存管理基础.md  07_核函数深入.md  08_性能分析入门.md  09_内存访问优化.md  10_精度与性能.md  11_Roofline模型.md  12_原子操作与竞争条件.md  13_共享内存深入.md  14_规约算法优化.md  15_Bank_Conflict优化.md  16_Cooperative_Groups.md  17_GEMM优化入门.md  18_GEMM分块优化.md  19_Tensor_Core编程.md  20_卷积算子实现.md  21_异步执行与延迟隐藏.md  22_CUDA流与并发.md  23_数据传输优化.md  24_CUDA_Graph.md  25_多GPU编程.md  26_低精度与量化.md  27_PTX与底层优化.md  28_微指令级调优.md  29_ILP与Warp_Divergence.md  30_CUDA官方库实战.md
